# sem_praca_POS

./: CMakeLists.txt  README.md  main.cpp  redPanw.png.crdownload  rozlozenieDosky.csv  server.cpp  server.h
Header_files/: board.h  client.h  console.h  consts.h  field.h  input.file.h  interface.h  piece.h  player.h  server.h
Header_files/App/: board.h  field.h  game.h  piece.h  player.h
Header_files/GUI/: GUIboard.h  GUIfield.h  GUIgame.h  GUIpiece.h  graphicsSystem.h
Header_files/communication/: client.h  server.h
Source_files/: board.cpp  client.cpp  console.cpp  field.cpp  input.file.cpp  interface.cpp  piece.cpp  player.cpp  server.cpp
Source_files/App/: board.cpp  field.cpp  game.cpp  piece.cpp  player.cpp
Source_files/GUI/: GUIboard.cpp  GUIfield.cpp  GUIgame.cpp  GUIpiece.cpp  graphicsSystem.cpp
Source_files/communication/: client.cpp  server.cpp
